@@ -1,0 +1,16 @@
+# Copyright (C) 2005 Anders Logg.
+# Licensed under the GNU GPL Version 2.
+#
+# The bilinear form a(u,v) and linear form L(v) for
+# Poisson's equation.
+#
+# Compile this form with FFC: ffc poisson.form.
+
+element = FiniteElement("Lagrange", "triangle", 1)
+
+v = BasisFunction(element)
+u = BasisFunction(element)
+f = Function(element)
+
+a = v.dx(i)*u.dx(i)*dx
+L = v*f*dx
