@@ -1,3 +1,5 @@
+ - Add simple demo program src/demo/poisson
+ - Update computation of alignment of faces to match FFC/FIAT
 0.5.7 [2005-06-23]
  - Clean up ODE test problems
  - Implement automatic detection of sparsity pattern from given matrix
